commit translated contents

--- a/includes/install-sdk-2017-2015-2013.md
+++ b/includes/install-sdk-2017-2015-2013.md
@@ -2,8 +2,8 @@
 Starta genom att ställa in din utvecklingsmiljö med Visual Studio och Azure SDK.
 
 * Visual Studio 2017 innehåller Azure SDK. Om du använder VS2017 krävs inga ytterligare inställningar för utvecklingsmiljön.
-* För Visual Studio 2015 klickar du på länken nedan för att installera [Azure SDK för Visual Studio 2015](http://go.microsoft.com/fwlink/?linkid=518003).
-* För Visual Studio 2013 klickar du på länken nedan för att installera [Azure SDK för Visual Studio 2013](http://go.microsoft.com/fwlink/?LinkID=324322).
+* För Visual Studio 2015 klickar du på länken nedan för att installera [Azure SDK för Visual Studio 2015](https://go.microsoft.com/fwlink/?linkid=518003).
+* För Visual Studio 2013 klickar du på länken nedan för att installera [Azure SDK för Visual Studio 2013](https://go.microsoft.com/fwlink/?LinkID=324322).
 
 * Om du inte har Visual Studio installerat, kan du använda följande för att installera [Visual Studio 2017](https://www.visualstudio.com/) med Azure SDK.
 
