--- a/includes/install-sdk-2017-2015-2013.md
+++ b/includes/install-sdk-2017-2015-2013.md
@@ -6,7 +6,7 @@ ms.date: 11/25/2018
 ms.author: jeconnoc
 ms.openlocfilehash: eda65a5825e8c528a727aa95ef347254d98d0803
 ms.sourcegitcommit: a08d1236f737915817815da299984461cc2ab07e
-ms.translationtype: HT
+ms.translationtype: MT
 ms.contentlocale: sv-SE
 ms.lasthandoff: 11/26/2018
 ms.locfileid: "52331515"
